.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:02:50 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 801548	   3316	 513520	1318384	 141df0	GUIApp.elf
14:02:48 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/webui_provision.c
../src/www/webui_provision.c:57:6: warning: no previous declaration for 'webui_provision_to_usb' [-Wmissing-declarations]
   57 | UINT webui_provision_to_usb(FX_MEDIA * media)
      |      ^~~~~~~~~~~~~~~~~~~~~~
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 801372	   3316	 513520	1318208	 141d40	GUIApp.elf
14:03:33 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building file: ../src/www/webui_provision.c
Building file: ../src/usb_thread_entry.c
In file included from ../src/www/web_assets.c:1:
../src/www/web_assets.h:15:1: error: unknown type name 'UINT'
   15 | UINT webui_provision_to_usb(FX_MEDIA * media);
      | ^~~~
../src/www/web_assets.h:15:29: error: unknown type name 'FX_MEDIA'
   15 | UINT webui_provision_to_usb(FX_MEDIA * media);
      |                             ^~~~~~~~
make: *** [src/www/subdir.mk:28: src/www/web_assets.o] Error 1
make: *** Waiting for unfinished jobs....
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
"make -r -j8 all" terminated with exit code 2. Build might be incomplete.
14:03:55 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building file: ../src/www/webui_provision.c
Building file: ../src/usb_thread_entry.c
In file included from ../src/www/web_assets.c:1:
../src/www/web_assets.h:16:1: error: unknown type name 'UINT'
   16 | UINT webui_provision_to_usb(FX_MEDIA * media);
      | ^~~~
../src/www/web_assets.h:16:29: error: unknown type name 'FX_MEDIA'
   16 | UINT webui_provision_to_usb(FX_MEDIA * media);
      |                             ^~~~~~~~
make: *** [src/www/subdir.mk:28: src/www/web_assets.o] Error 1
make: *** Waiting for unfinished jobs....
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
"make -r -j8 all" terminated with exit code 2. Build might be incomplete.
14:04:20 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building file: ../src/www/webui_provision.c
Building file: ../src/usb_thread_entry.c
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 801372	   3316	 513520	1318208	 141d40	GUIApp.elf
14:06:07 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/webui_provision.c
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
../src/www/webui_provision.c:14:13: warning: 'ensure_dir' defined but not used [-Wunused-function]
   14 | static UINT ensure_dir(FX_MEDIA * media, CHAR * dir_path)
      |             ^~~~~~~~~~
../src/www/webui_provision.c: In function 'webui_provision_to_usb':
../src/www/webui_provision.c:64:8: warning: 'st' is used uninitialized [-Wuninitialized]
   64 |     if (st != FX_SUCCESS) return st;
      |        ^
../src/www/webui_provision.c:59:10: note: 'st' was declared here
   59 |     UINT st;
      |          ^~
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 800476	   3316	 513520	1317312	 1419c0	GUIApp.elf
14:06:34 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/webui_provision.c
../src/www/webui_provision.c:21:13: warning: 'file_exists' defined but not used [-Wunused-function]
   21 | static UINT file_exists(FX_MEDIA * media, CHAR * path)
      |             ^~~~~~~~~~~
../src/www/webui_provision.c:14:13: warning: 'ensure_dir' defined but not used [-Wunused-function]
   14 | static UINT ensure_dir(FX_MEDIA * media, CHAR * dir_path)
      |             ^~~~~~~~~~
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 800476	   3316	 513520	1317312	 1419c0	GUIApp.elf
14:17:17 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 800468	   3316	 513520	1317304	 1419b8	GUIApp.elf
14:21:27 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 800468	   3316	 513520	1317304	 1419b8	GUIApp.elf
14:25:31 **** Incremental Build of configuration Debug for project GUIApp ****
make -r -j8 all 
Building file: ../src/www/web_assets.c
Building target: GUIApp.elf
arm-none-eabi-objcopy -O srec "GUIApp.elf"  "GUIApp.srec"
arm-none-eabi-size --format=berkeley "GUIApp.elf"
   text	   data	    bss	    dec	    hex	filename
 800468	   3316	 513520	1317304	 1419b8	GUIApp.elf
